actualizar el favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="Portafolio de Lenin Moreno - Ingeniero de Software"
     />
     <title>Mi Portafolio | Ingeniero de Software</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="styles/style.css" />
     <link
       rel="stylesheet"
