--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <i class="fas fa-server"></i>
             <h3>Backend</h3>
             <ul>
-              <li>Node.js</li>
-              <li>Express</li>
+              <li>Node.js / Express</li>
+              <li>Spring Boot</li>
               <li>APIs RESTful</li>
               <li>Bases de datos SQL</li>
             </ul>
@@ -168,7 +168,7 @@
             <ul>
               <li>Git</li>
               <li>GitHub</li>
-              <li>VS Code</li>
+              <li>Docker</li>
               <li>Postman</li>
             </ul>
           </div>
